feat(worker-lab): add policy-aware batch preparation
Add an ordered Server batch Prepare endpoint and let Java Worker managers optionally inject prepared runtime coordinates while preserving the ordinary single-Worker Prepare path for Java and Android.

Keep Worker registration policy selection in Server identity resolution without partitioning the Redis identity hash by kind. Migrate Scenario Worker replicas to bounded JSONL inventories with immutable filename/line coordinates, and update fleet and convergence proofs to observe those coordinates through Runtime Properties.